<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Github_Issue_Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="c_user_name">Username</string>
    <string name="c_repo_name">Reponame</string>
    <string name="c_search">Search</string>
    <string name="c_issues_list">Issues List</string>
    <string name="user_name">crashlytics</string>
    <string name="repo_name">secureudid</string>
    <string name="title_activity_main_view">MainView</string>
    <string name="hello_world">Hello world!</string>

</resources>
