<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >
    
    <TextView
        android:id="@+id/c_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/c_user_name" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_user_name"
        android:layout_below="@+id/c_user_name"
        android:ems="10"
        android:inputType="text"
        android:text="@string/user_name" />
    
    <TextView
        android:id="@+id/c_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_user_name"
        android:layout_below="@+id/user_name"
        android:text="@string/c_repo_name" />

    <EditText
        android:id="@+id/repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_user_name"
        android:layout_below="@+id/c_repo_name"
        android:ems="10"
        android:inputType="text"
        android:text="@string/repo_name" />
    
    <Button 
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_user_name"
        android:layout_below="@+id/repo_name"
        android:text="@string/c_search"
        android:onClick="search" />

</RelativeLayout>